# pulumi-gestalt

./: .gitignore  .mergify.yml  .mise.toml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.docs.yml  github_changelog.md  hk.pkl  justfile  mkdocs.yml  renovate.json  rust-toolchain.toml
changelog/: Cargo.toml
crates/c_ffi/: AGENTS.md  Cargo.toml  build.rs  cbindgen.toml  pulumi_gestalt.h
crates/c_ffi/src/: lib.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: config.rs  engine.rs  error.rs  lib.rs  model.rs  nodes.rs
crates/core/src/pulumi/: connector.rs  service_impl.rs
crates/domain/: AGENTS.md  Cargo.toml
crates/domain/src/: connector.rs  lib.rs
crates/model_macros/: Cargo.toml
crates/model_macros/src/: from_pulumi_value.rs  lib.rs  to_pulumi_value.rs
crates/model_macros/tests/: from_pulumi_value.rs  macro_test.rs  to_pulumi_value.rs
crates/rust/: AGENTS.md  Cargo.toml
crates/rust/src/: any_export.rs  extensions.rs  input.rs  input_or_output.rs  lib.rs  macros.rs  native.rs  oneof.rs  pulumi_any.rs  stdlib.rs
crates/rust/src/private/: mod.rs  output.rs
crates/rust/src/resources/: mod.rs  stack_reference.rs  stash.rs
crates/rust_integration/: AGENTS.md  Cargo.toml
crates/rust_integration/src/: async.rs  engine.rs  enginev2.rs  error.rs  finish.rs  lib.rs  native_pulumi_connector.rs  sync.rs
crates/rust_language_server/: Cargo.toml
crates/rust_language_server/src/: Cargo.toml.template  cargo_templater.rs  domain_ir.rs  domain_to_rust.rs  generator.rs  golang.rs  lib.rs  main.rs.template  package_model.rs  pcl_model.rs  pcl_to_domain.rs  rust_ir.rs  rust_to_string.rs
crates/rust_language_server/templates/: Cargo.toml.j2
crates/schema/: AGENTS.md  Cargo.toml
crates/schema/src/: arbitrary.rs  filter.rs  lib.rs  model.rs  schema.rs  utils.rs
crates/schema/tests/: test.rs
crates/schema/tests/output/array-of-enum-map/: package.txt
crates/schema/tests/output/azure-native-nested-types/: package.txt
crates/schema/tests/output/cyclic-types/: package.txt
crates/schema/tests/output/different-enum/: package.txt
crates/schema/tests/output/docker/: package.txt
crates/schema/tests/output/filtering-0/: package.txt
crates/schema/tests/output/filtering-1/: package.txt
crates/schema/tests/output/filtering-2/: package.txt
crates/schema/tests/output/functions-secrets/: package.txt
crates/schema/tests/output/mini-awsnative/: package.txt
crates/schema/tests/output/nested-module/: package.txt
crates/schema/tests/output/nested-module-thirdparty/: package.txt
crates/schema/tests/output/output-funcs/: package.txt
crates/schema/tests/output/output-funcs-edgeorder/: package.txt
crates/schema/tests/output/plain-object-defaults/: package.txt
crates/schema/tests/output/plain-object-disable-defaults/: package.txt
crates/schema/tests/output/random/: package.txt
crates/schema/tests/output/reserved_names/: package.txt
crates/schema/tests/output/unions-inline/: package.txt
crates/schema/tests/output/unions-inside-arrays/: package.txt
crates/schema/tests/output/workarounds/: package.txt
crates/schema_protobuf/: AGENTS.md  Cargo.toml
crates/schema_protobuf/src/: converter.rs  lib.rs
crates/schema_protobuf/tests/: test.rs
crates/schema_protobuf/tests/output/array-of-enum-map/: package.pb
crates/schema_protobuf/tests/output/aws-0/: package.pb
crates/schema_protobuf/tests/output/aws-1/: package.pb
crates/schema_protobuf/tests/output/aws-10/: package.pb
crates/schema_protobuf/tests/output/aws-11/: package.pb
crates/schema_protobuf/tests/output/aws-12/: package.pb
crates/schema_protobuf/tests/output/aws-13/: package.pb
crates/schema_protobuf/tests/output/aws-14/: package.pb
crates/schema_protobuf/tests/output/aws-15/: package.pb
crates/schema_protobuf/tests/output/aws-16/: package.pb
crates/schema_protobuf/tests/output/aws-17/: package.pb
crates/schema_protobuf/tests/output/aws-18/: package.pb
crates/schema_protobuf/tests/output/aws-19/: package.pb
crates/schema_protobuf/tests/output/aws-2/: package.pb
crates/schema_protobuf/tests/output/aws-20/: package.pb
crates/schema_protobuf/tests/output/aws-21/: package.pb
crates/schema_protobuf/tests/output/aws-3/: package.pb
crates/schema_protobuf/tests/output/aws-4/: package.pb
crates/schema_protobuf/tests/output/aws-5/: package.pb
crates/schema_protobuf/tests/output/aws-6/: package.pb
crates/schema_protobuf/tests/output/aws-7/: package.pb
crates/schema_protobuf/tests/output/aws-8/: package.pb
crates/schema_protobuf/tests/output/aws-9/: package.pb
crates/schema_protobuf/tests/output/azure-0/: package.pb
crates/schema_protobuf/tests/output/azure-1/: package.pb
crates/schema_protobuf/tests/output/azure-10/: package.pb
crates/schema_protobuf/tests/output/azure-11/: package.pb
crates/schema_protobuf/tests/output/azure-12/: package.pb
crates/serde_constant_string/: AGENTS.md  Cargo.toml
crates/serde_constant_string/src/: lib.rs
crates/wasm_runner/: AGENTS.md  Cargo.toml
crates/wasm_runner/src/: main.rs  pulumi.rs  version_finder.rs
deploy/repository/: Cargo.toml  Pulumi.dev.yaml  Pulumi.yaml  build.rs  justfile
deploy/repository/src/: github.rs  github_workflow.rs  main.rs
docs/: index.md
examples/plugins/: Cargo.toml  justfile
examples/plugins/src/: lib.rs
examples/plugins/tests/: test.rs
examples/raw_rust/: Cargo.toml  Pulumi.test.yaml  Pulumi.yaml  justfile
examples/raw_rust/src/: main.rs
examples/raw_rust/tests/: test.rs
examples/raw_rust_async/: Cargo.toml  Pulumi.test.yaml  Pulumi.yaml  justfile
examples/raw_rust_async/src/: main.rs
examples/test/: Cargo.toml  Pulumi.test.yaml  Pulumi.yaml  justfile
examples/test/src/: main.rs
examples/test/tests/: test.rs
examples/typesystem/: Cargo.toml
examples/typesystem/src/: lib.rs
examples/wasm/: Cargo.toml  Pulumi.test.yaml  Pulumi.yaml  justfile
examples/wasm/src/: lib.rs
examples/wasm/tests/: test.rs
providers/docker/: Cargo.toml
providers/test/: Cargo.toml  build.rs
providers/test/src/: lib.rs
(+564 files in other folders)
