[workspace.lints.clippy]
panic = "warn"

[workspace]
resolver = "3"
members = [
    "changelog",
    "changelog_lib",
    "crates/c_ffi",
    "crates/core",
    "crates/grpc",
    "crates/proto",
    "crates/rust",
    "crates/rust_build",
    "crates/rust_generator",
    "crates/rust_integration",
    "crates/schema",
    "crates/schema_protobuf",
    "crates/serde_constant_string",
    "crates/wasm_runner",
    "crates/wit", 
    "deploy/repository",
    "examples/c",
    "examples/common",
    "examples/dependencies",
    "examples/docker",
    "examples/failure",
    "examples/multiple_providers",
    "examples/native",
    "examples/plugins",
    "examples/raw_rust",
    "examples/secret",
    "examples/simple",
    "examples/test",
    "examples/typesystem",
    "examples/wasm",
    "providers/aws-mini",
    "providers/azure-mini",
    "providers/cloudflare",
    "providers/docker",
    "providers/gcp-mini",
    "providers/random",
    "providers/test",
    "providers/typesystem",
    "regenerator",
]

[workspace.package]
version = "0.0.0-DEV"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/andrzejressel/pulumi-gestalt"
readme = "README.md"

[workspace.dependencies]
pulumi_gestalt_core = { version = "=0.0.0-DEV", path = "crates/core" }
pulumi_gestalt_build = { version = "=0.0.0-DEV", path = "crates/rust_build" }
pulumi_gestalt_generator = { version = "=0.0.0-DEV", path = "crates/rust_generator" }
pulumi_gestalt_rust = { version = "=0.0.0-DEV", path = "crates/rust" }
pulumi_gestalt_proto = { version = "=0.0.0-DEV", path = "crates/proto" }
pulumi_gestalt_wit = { version = "=0.0.0-DEV", path = "crates/wit" }
pulumi_gestalt_providers_docker = { version = "=0.0.0-DEV", path = "providers/docker" }
pulumi_gestalt_providers_random = { version = "=0.0.0-DEV", path = "providers/random" }
pulumi_gestalt_providers_test = { version = "=0.0.0-DEV", path = "providers/test" }
pulumi_gestalt_providers_typesystem = { version = "=0.0.0-DEV", path = "providers/typesystem" }
pulumi_gestalt_examples_common = { version = "=0.0.0-DEV", path = "examples/common" }
pulumi_gestalt_grpc_connection = { version = "=0.0.0-DEV", path = "crates/grpc" }
pulumi_gestalt_rust_integration = { version = "=0.0.0-DEV", path = "crates/rust_integration" }
pulumi_gestalt_schema = { version = "=0.0.0-DEV", path = "crates/schema" }
pulumi_gestalt_schema_protobuf = { version = "=0.0.0-DEV", path = "crates/schema_protobuf" }
changelog_lib = { version = "=0.0.0-DEV", path = "changelog_lib" }
pulumi_gestalt_serde_constant_string = { version = "=0.0.0-DEV", path = "crates/serde_constant_string" }

anyhow = "1.0.98"
prost = "0.14.1"
prost-types = "0.14.1"
uuid = { version = "1.16.0", features = ["v4", "v7"] }
futures = "0.3.31"
wit-bindgen = "0.48.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tonic = { version = "0.14.0", default-features = false }
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
wasmtime = "39.0.0"
wasmtime-wasi = "39.0.0"
log = { version = "0.4.27", features = ["kv"] }
log4rs = "1.3.0"
tokio = { version = "1.45.0", features = ["sync", "macros", "io-util", "rt", "time", "fs", "rt-multi-thread"] }
tokio-stream = "0.1.17"
clap = { version = "4.5.38", features = ["derive"] }
regex = "1.11.1"
syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
assert_cmd = "2.0.17"
itertools = "0.14.0"
handlebars = "6.3.2"
convert_case = "0.9.0"
mockall = "0.13.1"
serde_yaml = "0.9.34+deprecated"
prettyplease = "0.2.32"
bon = "3.6.3"
proc-macro2 = "1.0.95"
askama = "0.14.0"
tempfile = "3.20.0"
pathdiff = "0.2.3"
wat = "1.230.0"
wasmparser = "0.241.0"
cbindgen = "0.29.0"
libc = "0.2.172"
gix = "0.74.0"
once_cell = "1.21.3"
proptest = "1.6.0"
