[package]
name = "pulumi_native_c"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc.workspace = true
pulumi_gestalt_rust_integration.workspace = true
pulumi_gestalt_schema.workspace = true
pulumi_gestalt_schema_protobuf.workspace = true
anyhow.workspace = true

[build-dependencies]
cbindgen.workspace = true
