[package]
name = "pulumi_gestalt_core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Core Pulumi Gestalt implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
pulumi_gestalt_domain.workspace = true

[dev-dependencies]
mockall.workspace = true
pulumi_gestalt_domain = { workspace = true, features = ["test-utils"] }
tokio.workspace = true
