[package]
name = "pulumi_gestalt_domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Domain models and abstractions for Pulumi Gestalt"

[features]
default = []
test-utils = ["mockall"]

[dependencies]
bon.workspace = true
mockall = { workspace = true, optional = true }
async-trait.workspace = true
anyhow.workspace = true
pulumi_gestalt_model = { path = "../model" }

[lints]
workspace = true
