[package]
name = "pulumi_gestalt_rust"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "UNOFFICIAL Rust Pulumi support based on Pulumi Gestalt"

[package.metadata.pulumi]
related_crate = "pulumi_gestalt"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bon.workspace = true
pulumi_gestalt_serde_constant_string.workspace = true
pulumi_gestalt_rust_integration.workspace = true
tokio.workspace = true

[dev-dependencies]
pulumi_gestalt_build = { path = "../rust_build" }