[package]
name = "pulumi_gestalt_rust_integration"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Rust helper functions for Pulumi Gestalt"

[features]
async_functions = []
send_functions = []

[dependencies]
anyhow.workspace = true
pulumi_gestalt_core.workspace = true
serde_json.workspace = true
pulumi_gestalt_grpc_connection.workspace = true
pulumi_gestalt_proto.workspace = true
uuid.workspace = true
pulumi_gestalt_schema.workspace = true
pulumi_gestalt_domain.workspace = true
tokio.workspace = true
static_assertions.workspace = true
futures.workspace = true

[lints]
workspace = true
