[package]
name = "pulumi_gestalt_schema"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Pulumi schema reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
handlebars.workspace = true
regex.workspace = true
convert_case.workspace = true
serde_yaml.workspace = true
prettyplease.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
itertools.workspace = true
askama.workspace = true
pulumi_gestalt_rust.workspace = true
pathdiff.workspace = true
pulumi_gestalt_proto = { workspace = true, features = ["pulumi_gestalt"] }

[dev-dependencies]
assert_cmd.workspace = true
proptest.workspace = true