[package]
name = "pulumi_gestalt_serde_constant_string"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Const string values for serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true