[package]
name = "pulumi_gestalt_wasm_runner"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Wasm runner for Pulumi Gestalt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
log4rs.workspace = true
clap.workspace = true
pulumi_gestalt_wit = { workspace = true, features = ["runner"] }
wasmparser.workspace = true
serde.workspace = true
serde_json.workspace = true
pulumi_gestalt_rust_integration.workspace = true

[dev-dependencies]
wat.workspace = true