[package]
name = "pulumi_gestalt_example_plugins"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pulumi_gestalt_wit = { workspace = true, features = ["client"] }

[features]
example_test = []

[dev-dependencies]
anyhow.workspace = true
assert_cmd.workspace = true
pulumi_gestalt_examples_common.workspace = true