[package]
name = "pulumi_gestalt_example_raw_rust"
version.workspace = true
edition.workspace = true
publish = false

[features]
example_test = []

[dependencies]
pulumi_gestalt_rust_integration.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
pulumi_gestalt_examples_common.workspace = true