[package]
name = "pulumi_gestalt_example_raw_rust_async"
version.workspace = true
edition.workspace = true
publish = false

[features]
example_test = []

[dependencies]
pulumi_gestalt_rust_integration.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
anyhow.workspace = true
pulumi_gestalt_examples_common.workspace = true