[package]
name = "pulumi_gestalt_example_typesystem"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulumi_gestalt_rust.workspace = true
pulumi_gestalt_providers_typesystem.workspace = true
serde_json.workspace = true
