[package]
name = "pulumi_gestalt_providers_docker"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
pulumi_gestalt_rust.workspace = true
bon.workspace = true
serde.workspace = true
rootcause.workspace = true
pulumi_gestalt_model.workspace = true
futures.workspace = true

[build-dependencies]
pulumi_gestalt_build.workspace = true